Bug fix with merge
Signed-off-by: Prudhvi Godithi <pgodithi@amazon.com>