@@ -277,7 +277,7 @@ allprojects {
       memoryMaximumSize = project.property('options.forkOptions.memoryMaximumSize')
     }
 
-    // compile.options.compilerArgs << '-Werror' // temporarily disabled for JDK 25 local build
+    compile.options.compilerArgs << '-Werror'
     compile.options.compilerArgs << '-Xlint:auxiliaryclass'
     compile.options.compilerArgs << '-Xlint:cast'
     compile.options.compilerArgs << '-Xlint:classfile'
@@ -308,6 +308,17 @@ allprojects {
     compile.options.compilerArgs << '-Xdoclint:html'
     compile.options.compilerArgs << '-Xdoclint:reference'
     compile.options.compilerArgs << '-Xdoclint:syntax'
+
+    // ScopedValue is preview in JDK 21-24; modules targeting release 21+ need --enable-preview to load :server classes
+    if (JavaVersion.current().majorVersion.toInteger() < 25) {
+      compile.doFirst {
+        def rel = compile.options.release.getOrNull()
+        if (rel == null || rel >= 21) {
+          compile.options.compilerArgs << '--enable-preview'
+          compile.options.compilerArgs << '-Xlint:-preview'
+        }
+      }
+    }
   }
 
   // ignore missing javadocs
